# Termfolio

./: Cargo.toml  index.html
.github/workflows/: gh-pages-deploy.yml
configs/: config.json  img_g.txt  img_r.txt
configs/lang_icons/: javascript.txt  pythons.txt
src/: base.rs  config.json  fetch.rs  formats.rs  img.txt  lib.rs  main.rs  prompt.rs  repos.txt  texts.rs
src/base/: banner.rs  prompt.rs
src/base/prompt/: general.rs  keyboard.rs  themes.rs
src/commands/: fetch.rs  texts.rs
src/commands/fetch/: formats.rs  structs.rs
src/fetch/: formats.rs
styles/: styles.css  themes.css
