[package]
name = "termfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
serde = "1.0.195"
serde_json = "1.0.111"
